# benchstrace

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
benchstrace/: __init__.py  benchmark.py  cli.py  strace.py
